[gd_scene load_steps=4 format=3 uid="uid://b1e82qpiysqth"]

[ext_resource type="Script" path="res://src/rooms/room.gd" id="1_sf0en"]
[ext_resource type="TileSet" uid="uid://ctvunq4ln4pe1" path="res://assets/tileset.tres" id="2_i1nnw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kf4jx"]
size = Vector2(5600, 5600)

[node name="finishRoom" type="Area2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_sf0en")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("2_i1nnw")
format = 2
layer_0/name = "Ground"
layer_0/tile_data = PackedInt32Array(-2, 65538, 0, 65534, 2, 0, 131070, 131074, 0, 131071, 131074, 0, 65535, 2, 0, -131072, 2, 0, 65536, 131074, 0, 65537, 131074, 0, 1, 2, 0, -65535, 65538, 0, -131071, 65538, 0, 196606, 65538, 0, 262142, 65538, 0, 196609, 65538, 0, 131073, 65538, 0, 131072, 65538, 0, 196607, 65538, 0, 262143, 65538, 0, 196608, 65538, 0, -262143, 131074, 0, -196607, 65538, 0, -196608, 131074, 0, -262144, 131074, 0, -65539, 65538, 0, -3, 131074, 0, 65533, 131074, 0, 131069, 65538, 0, 131068, 65538, 0, 65532, 65538, 0, -4, 2, 0, -65540, 2, 0, -131076, 2, 0, -131075, 65538, 0, -196605, 131074, 0, -131069, 2, 0, -65533, 2, 0, 3, 65538, 0, 65539, 65538, 0, 131074, 65538, 0, 196610, 131074, 0, 262141, 2, 0, 196604, 2, 0, 262140, 2, 0, 196611, 2, 0, 131075, 2, 0, 196605, 65538, 0, 65538, 65538, 0, 2, 131074, 0, -65534, 2, 0, -131070, 65538, 0, -196606, 65538, 0, 327677, 2, 0, 327678, 2, 0, 327679, 131074, 0, 262144, 131074, 0, 262145, 2, 0, 262146, 131074, 0, 262147, 2, 0, 131076, 2, 0, 65540, 2, 0, 4, 65538, 0, -65532, 131074, 0, -131068, 2, 0, -196604, 2, 0, -327676, 2, 0, -327677, 65538, 0, -327678, 131074, 0, -327679, 2, 0, -327680, 131074, 0, -262145, 131074, 0, -262146, 131074, 0, -131077, 131074, 0, -65541, 2, 0, -5, 131074, 0, 65531, 65538, 0, 131067, 2, 0, 196603, 2, 0, 5, 2, 0, 65541, 2, 0, 327682, 131074, 0, 327681, 2, 0, 327680, 2, 0, 393215, 2, 0, 393214, 2, 0, 393213, 2, 0, 65530, 131074, 0, -6, 2, 0, -65542, 131074, 0, -131078, 131074, 0, -262142, 2, 0, -262141, 65538, 0, -262140, 131074, 0, -196611, 2, 0, -196610, 2, 0, -196609, 131074, 0, -131073, 131074, 0, -131074, 65538, 0, -65538, 65538, 0, -65537, 2, 0, -1, 2, 0, -65536, 2, 0, 0, 2, 0, -196613, 131074, 0, -196612, 65538, 0, -262147, 2, 0, -196614, 2, 0, -262150, 131074, 0, -262148, 65538, 0, -327675, 2, 0, -262139, 2, 0, -196603, 131074, 0, -131067, 2, 0, -65531, 131074, 0, 131077, 131074, 0, 196613, 2, 0, 262149, 131074, 0, 262148, 131074, 0, 327684, 131074, 0, 327683, 2, 0, 196612, 2, 0, 327685, 131074, 0, 327676, 2, 0, 327675, 2, 0, 393212, 131074, 0, 393211, 2, 0, 393210, 2, 0, 327674, 2, 0, 262138, 2, 0, 196602, 131074, 0, 131066, 131074, 0, 262139, 131074, 0, -327686, 131074, 0, -327685, 131074, 0, -327684, 131074, 0, -327683, 131074, 0, -327682, 131074, 0, -327681, 2, 0, -393216, 2, 0, -393215, 131074, 0, -393214, 2, 0, -393213, 2, 0, -393212, 2, 0, -393211, 2, 0, -327687, 131074, 131073, -262151, 2, 65537, -196615, 131074, 131073, 262137, 2, 65537, 327673, 131074, 131073, 393209, 131074, 131073, 327686, 65538, 1, 262150, 2, 1, 196614, 131074, 1, -393210, 65538, 1, -327674, 2, 1, -262138, 131074, 1, -262149, 131074, 0)
layer_1/name = "Walls"
layer_1/z_index = 2
layer_1/tile_data = PackedInt32Array(-393223, 262146, 262145, -458746, 262146, 327681, 458745, 262146, 65538, 393222, 262146, 131074, 327686, 262146, 0, 262150, 262146, 0, 196614, 262146, 0, -393210, 262146, 0, -327674, 262146, 0, -262138, 262146, 0, -327687, 262146, 0, -262151, 262146, 0, -196615, 262146, 0, 393209, 262146, 0, 327673, 262146, 0, 262137, 262146, 0, 458746, 196610, 1, 458747, 196610, 1, 458748, 196610, 1, 393221, 196610, 1, 393220, 196610, 1, 393219, 196610, 1, -458747, 196610, 1, -458748, 196610, 1, -458749, 196610, 1, -393222, 196610, 1, -393221, 196610, 1, -393220, 196610, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_kf4jx")

[node name="entry1" type="Marker2D" parent="."]
position = Vector2(0, 2800)

[node name="entry2" type="Marker2D" parent="."]
position = Vector2(2800, 0)

[node name="entry3" type="Marker2D" parent="."]
position = Vector2(0, -2800)

[node name="entry4" type="Marker2D" parent="."]
position = Vector2(-2800, 0)

[node name="LootPosition" type="Marker2D" parent="."]

[node name="FinishTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="player_entered_first_time" from="." to="." method="dungeon_finished"]
[connection signal="timeout" from="FinishTimer" to="." method="_on_finish_timer_timeout"]
